# neural-lex

./: .gitignore  AGENTS.md  README.md  TECHNICAL.md  pyproject.toml
examples/: README.md  tll_ch2_excerpt.txt  tll_intersection_atoms.json
neural_lex/: README.md  __init__.py  cli.py  extractor.py  finlex.py  llm_extractor.py  models.py  recursive.py  symbolic.py
neural_lex.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: README.md  test_llm_extractor.py  test_symbolic.py
